# RadioPlayer

./: .gitignore  README.md  convert_folder.py  install.sh  log95.py  player.py  player_modules.py  pyproject.toml  radioPlayer.py  radioPlayer_playlist_file.txt  radioPlaylist.py  rds_codec.py  requirements.txt  tinytag.py  uninstall.sh
modules/: __init__.py  active_modifier.py  advisor.py  cache.py  cli_progress.py  crossfade_init.py  ffmpeg_procman.py  fsdb.py  jingle.py  modules.txt  no_intro_fade_in.py  play_counter.py  play_sort.py  play_sort2.py.disabled  playlist_parser.py  progress.py  rds.py  remover.py  shuffler.py  skipper.py  web.html  web.js  web.py  write_playlists.py
modules/web/: fm95.html  fsdb.html  index.html  listen.html  reader.js  web.js
playlists/: add.sh  tui.py
playlists/friday/: night
playlists/monday/: day  late_night  night
playlists/saturday/: late_night  night
playlists/sunday/: late_night
playlists/wednesday/: day  late_night
