[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-tools"
version = "0.1"
dependencies = ["log95", "unidecode", "libcache"]

[tool.setuptools]
py-modules = ["radioPlaylist", "radioPlayer"]
packages = ["modules"]

[project.scripts]
radio-playlist = "radioPlaylist:main"
radio-player = "radioPlayer:main"
