[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-tools"
version = "0.2"
dependencies = ["unidecode", "libcache"]

[tool.setuptools]
py-modules = ["radioPlaylist", "radioPlayer", "tinytag", "rds_codec", "log95"]
packages = ["modules"]

[project.scripts]
radio-playlist = "radioPlaylist:main"
radio-player = "radioPlayer:main"
